# fraud-detection

./: Dockerfile  pyproject.toml
.github/workflows/: cd.yml  retrain.yml
scripts/: generate_synthetic_dataset.py
src/fraud_detection/: __init__.py  cli.py  config.py  ui_helpers.py
src/fraud_detection/api/: main.py  schemas.py  service.py
src/fraud_detection/data/: features.py  pipeline.py  schema.py
src/fraud_detection/modeling/: evaluate.py  train.py
src/fraud_detection/monitoring/: drift.py  promotion.py
src/fraud_detection/utils/: mlflow_utils.py  paths.py
streamlit_app/: app.py
tests/: conftest.py  test_api.py  test_data_pipeline.py  test_features.py  test_modeling.py  test_promotion.py  test_ui_helpers.py
